# Final-Project

./: 01_Preprocessing.ipynb  02_EDA_and_Visualization.ipynb  02_EDA_and_Visualization_KHOI.ipynb  03_Modeling_and_Prediction.ipynb  03_Modeling_and_Prediction_KHOI.ipynb  Daily_Dataset_Amount_Based.csv  Mode.ipynb  pyproject.toml
Final Project Folder/: 01_Preprocessing.ipynb  02_EDA_and_Visualization_KHOI.ipynb  03_Modeling_and_Prediction_KHOI.ipynb  Amazon_Weekly_Revenue.csv  Final_EDA_and_Visualization_KHOI.ipynb  Final_Modeling_and_Prediction.ipynb  Final_Preprocessing.ipynb  Nhom11_EDA_and_Visualization.ipynb  Nhom11_Modeling_and_Prediction.ipynb  Nhom11_Preprocessing.ipynb
Pre-EDA_New/: 01_Preprocessing.ipynb  02_EDA_and_Visualization.ipynb  02_EDA_and_Visualization_KHOI.ipynb  Amazon_Weekly_Revenue.csv
