[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "amazon-sales-analysis"
version = "0.1.0"
description = "Amazon Sales Data Analysis and Prediction"
requires-python = ">=3.8"
license = "MIT"
authors = [
    {name = "Khoa", email = "your.email@example.com"}
]

dependencies = [
    # Core Data Science
    "pandas>=1.5.0",
    "numpy>=1.23.0",
    
    # Visualization
    "matplotlib>=3.6.0",
    "seaborn>=0.12.0",
    "plotly>=5.11.0",
    "pywaffle>=1.1.0",
    "wordcloud>=1.9.0",
    "squarify>=0.4.3",
    
    # Scientific Computing
    "scipy>=1.9.0",
    
    # Machine Learning
    "scikit-learn>=1.2.0",
    
    # Statistical Analysis
    "statsmodels>=0.14.0",
    
    # Deep Learning & Advanced ML
    "xgboost>=1.7.0",
    "lightgbm>=3.3.0",
    
    # Model Interpretation
    "shap>=0.41.0",
    
    # Jupyter Support
    "ipython>=8.0.0",
    "ipywidgets>=8.0.0",
    "jupyter>=1.0.0",
    "jupyterlab>=3.5.0",
    "notebook>=6.5.0",
    "ipykernel>=6.19.0",
]

[project.optional-dependencies]
dev = [
    "black>=22.0.0",
    "flake8>=6.0.0",
    "pytest>=7.2.0",
    "pytest-cov>=4.0.0",
]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310']